force-app/main/default/objects/Biggest_Competitor__c/Biggest_Competitor__c.object-meta.xml
<CustomObject>
    <label>Key Competitor</label>
    <nameField>
        <displayFormat>BC - {0000}</displayFormat>
        <label>Biggest Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>