force-app/main/default/objects/Biggest_Competitor__c/fields/Level_of_Threat__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Threat__c</fullName>
    <label>Level of Threat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>