force-app/main/default/objects/Biggest_Competitor__c/fields/Products_Services_Competitor_is_Selling__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Competitor_is_Selling__c</fullName>
    <label>Products/Services Competitor is Selling</label>
    <type>TextArea</type>
</CustomField>