force-app/main/default/objects/Biggest_Competitor__c/fields/Rep_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name_Title__c</fullName>
    <label>Rep Name/Title</label>
    <length>18</length>
    <type>Text</type>
</CustomField>